infra/aws/tofu/envs/dev/ecs_ingestion_api_service.tf
locals {
  # Pin to the exact image you pushed (immutable + safest for ECS)
  ingestion_api_image = "${aws_ecr_repository.ingestion_api.repository_url}@sha256:20c8842ced00596581281a2101ba01fba83af5afcad12f538ebd169b30a51236"
}

resource "aws_ecs_task_definition" "ingestion_api" {
  family                   = "mrp-ingestion-api-dev"
  requires_compatibilities = ["FARGATE"]
  network_mode             = "awsvpc"
  cpu                      = 256
  memory                   = 512

  execution_role_arn = aws_iam_role.ecs_task_execution.arn
  task_role_arn      = aws_iam_role.ingestion_api_task.arn

  container_definitions = jsonencode([
    {
      name      = "ingestion-api"
      image     = local.ingestion_api_image
      essential = true

      portMappings = [
        { containerPort = 8000, hostPort = 8000, protocol = "tcp" }
      ]

      logConfiguration = {
        logDriver = "awslogs"
        options = {
          awslogs-group         = aws_cloudwatch_log_group.ingestion_api.name
          awslogs-region        = local.region
          awslogs-stream-prefix = "ecs"
        }
      }

      healthCheck = {
        command     = ["CMD-SHELL", "curl -fsS http://localhost:8000/healthz || exit 1"]
        interval    = 30
        timeout     = 5
        retries     = 3
        startPeriod = 15
      }
    }
  ])
}

resource "aws_ecs_service" "ingestion_api" {
  name                   = "mrp-ingestion-api-dev"
  cluster                = aws_ecs_cluster.dev.id
  task_definition        = aws_ecs_task_definition.ingestion_api.arn
  desired_count          = 1
  enable_execute_command = true
  launch_type            = "FARGATE"

  network_configuration {
    subnets          = aws_subnet.private[*].id
    security_groups  = [aws_security_group.ingestion_api_tasks.id]
    assign_public_ip = false
  }

  load_balancer {
    target_group_arn = aws_lb_target_group.ingestion_api.arn
    container_name   = "ingestion-api"
    container_port   = 8000
  }

  health_check_grace_period_seconds = 30
  lifecycle {
    ignore_changes = [
      task_definition,
    ]
  }


  depends_on = [aws_lb_listener.ingestion_api_http]
}
